# cpp_gtk_gstreamer_template

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  meson.build  meson.sh
src/: local_capture.cpp  local_capture.h  main.cpp  main.h
